Fix width and table text wrap

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,3 +1,8 @@
+.wy-side-nav-search {background-color: #1fab90}
+.wy-nav-content {
+   max-width: initial;
+}
+
 .rst-content code.literal:not(.download)
 {
   color: #000;
@@ -53,4 +58,8 @@
   .github-link {
     display: none;
   }
+}
+
+.wy-table-responsive table td, .wy-table-responsive table th {
+  white-space: normal;
 }
